Merge stashed changes of Webgathering